doc: Documentando uso de RAG Agêntico

--- a/LangChain/RAG/hands_on.ipynb
+++ b/LangChain/RAG/hands_on.ipynb
@@ -658,6 +658,232 @@
     "\n",
     "- Relatórios de Inteligência de Mercado: Um agente que precisa consolidar dados de notícias recentes, relatórios internos de vendas e dados de concorrentes para produzir uma análise de risco."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f62af1df",
+   "metadata": {},
+   "source": [
+    "# Exemplo de **RAG Agêntico**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8546eba",
+   "metadata": {},
+   "source": [
+    "```python \n",
+    "\n",
+    "from langchain_pinecone import PineconeVectorStore\n",
+    "\n",
+    "# -------------------------- Definindo vectors databases --------------------------\n",
+    "vector_store_ods = PineconeVectorStore.from_documents(\n",
+    "    documents=chunks_ods,\n",
+    "    embedding=embeddings_model,\n",
+    "    index_name=index_pinecone, # O mesmo índice que você já usa\n",
+    "    pinecone_api_key=pinecone_api_key,\n",
+    "    namespace=\"catalogo-ods\"    # A separação mágica acontece aqui\n",
+    ")\n",
+    "\n",
+    "vector_store_livreto = PineconeVectorStore(\n",
+    "    index_name=\"livreto-base-evidencia\",\n",
+    "    embedding=embeddings_model,\n",
+    "    pinecone_api_key=pinecone_api_key,\n",
+    ")\n",
+    "# ---------------------------------------------------------------------------------\n",
+    "\n",
+    "# ---------------------- Definindo retrievals -------------------------------------\n",
+    "retriever_livreto = vector_store_livreto.as_retriever(\n",
+    "    search_kwargs={\n",
+    "        \"namespace\": \"livreto-metricis\", \n",
+    "        \"k\": 3\n",
+    "        }\n",
+    "    ) \n",
+    "\n",
+    "retriever_ods = vector_store_ods.as_retriever(\n",
+    "    search_kwargs={\n",
+    "        \"namespace\": \"catalogo-ods\",\n",
+    "        \"k\": 2\n",
+    "        }\n",
+    "    )\n",
+    "# ---------------------------------------------------------------------------------\n",
+    "\n",
+    "# ---------------------------------- Definindo tools ------------------------------\n",
+    "from langchain.tools.retriever import create_retriever_tool\n",
+    "\n",
+    "# Aqui, você transforma os retrievers e uma função Python em ferramentas que o Agente sabe usar:\n",
+    "tool_livreto = create_retriever_tool(\n",
+    "    retriever_livreto,\n",
+    "    \"busca_gestao_publica\",\n",
+    "    \"Útil para identificar qual etapa do ciclo de políticas públicas se relaciona com um texto ou projeto.\"\n",
+    ")\n",
+    "\n",
+    "tool_ods = create_retriever_tool(\n",
+    "    retriever_ods,\n",
+    "    \"busca_ods_onu\",\n",
+    "    \"Útil para identificar quais Objetivos de Desenvolvimento Sustentável (ODS) e metas da ONU se relacionam com um texto ou projeto.\"\n",
+    ")\n",
+    "\n",
+    "# tool_livreto e tool_ods: Permitem que o Agente \"saia para pesquisar\" se não tiver certeza sobre uma ODS ou uma etapa do ciclo de políticas.\n",
+    "\n",
+    "from enum import Enum\n",
+    "from pydantic import Field, BaseModel\n",
+    "from typing import List\n",
+    "\n",
+    "class EtapaCicloPP(Enum):\n",
+    "    DEFINICAO = \"Definição e Dimensão\"\n",
+    "    MOBILIZACAO = \"Mobilização\"\n",
+    "    MAPEAMENTO = \"Mapeamento dos Determinantes\"\n",
+    "    SOLUCAO = \"Solução\"\n",
+    "    JUSTIFICATIVA = \"Justificativa\"\n",
+    "    APRIMORAMENTO = \"Aprimoramento\"\n",
+    "    CERTIFICACAO = \"Certificação\"\n",
+    "\n",
+    "class Classificacao(Enum):\n",
+    "    ACADEMICA = \"Acadêmica\"\n",
+    "    TECNICA = \"Técnica\"\n",
+    "\n",
+    "class AreaAvaliada(Enum):\n",
+    "    EDUCACAO = \"Educação\"\n",
+    "    SAUDE = \"Saúde\"\n",
+    "    MEIO_AMBIENTE = \"Meio Ambiente\"\n",
+    "    GENERO = \"Gênero\"\n",
+    "    RACA = \"Raça\"\n",
+    "    POBREZA = \"Pobreza\"\n",
+    "    DESENVOLVIMENTO_SOCIAL = \"Desenvolvimento Social\"\n",
+    "\n",
+    "\n",
+    "class Metodologia(Enum):\n",
+    "    QUALITATIVA = \"Qualitativa\"\n",
+    "    QUANTITATIVA = \"Quantitativa\"\n",
+    "    MISTA = \"Mista\"\n",
+    "\n",
+    "\n",
+    "class Trabalho(BaseModel):\n",
+    "    classificacao: Classificacao = Field(..., description=\"Acadêmico ou técnico\")\n",
+    "    metodologia: Metodologia = Field(..., description=\"Abordagem do trabalho\")\n",
+    "    area_avaliada: AreaAvaliada = Field(..., description=\"Área avaliada no trabalho\")\n",
+    "    ods: List[int] = Field(..., description=\"Número das ODS relacionadas ao trabalho (texto)\")\n",
+    "    etapa: EtapaCicloPP = Field(..., description=\"Etapa do ciclo de políticas públicas\")\n",
+    "    titulo:str = Field(..., description=\"Titulo do trabalho\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "from langchain.tools import tool\n",
+    "\n",
+    "# 1. Criamos uma função decorada como @tool\n",
+    "# Isso transforma seu Pydantic em uma ferramenta que o Agente reconhece\n",
+    "@tool\n",
+    "def formatar_resposta_final(analise: Trabalho):\n",
+    "    \"\"\"\n",
+    "    Usa esta ferramenta por último para entregar a análise final estruturada. \n",
+    "    Esta ferramenta valida todos os Enums e campos obrigatórios.\n",
+    "    \"\"\"\n",
+    "    return analise\n",
+    "tools_com_output = [tool_livreto, tool_ods, formatar_resposta_final]\n",
+    "\n",
+    "# ---------------------------------------------------------------------------------\n",
+    "\n",
+    "# -------------------------------- Criando agente --------------------------------\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.agents import AgentExecutor, create_openai_functions_agent\n",
+    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "\n",
+    "\n",
+    "def agente_classificador(query:str) -> dict:\n",
+    "    # 1. O system_text: É a \"Constituição\" do Agente. Aqui você define o Codebook.\n",
+    "    #  Você deu à IA a \"personalidade\" de um pesquisador sênior e explicou cada regra de negócio do Insper. \n",
+    "    system_text = \"\"\"\n",
+    "        Você é um pesquisador sênior especializado em revisão sistemática de políticas públicas e \n",
+    "        nos Objetivos de Desenvolvimento Sustentável (ODS) da ONU. \n",
+    "        Sua tarefa é codificar estudos extraindo dados sistematicamente conforme os critérios abaixo.\n",
+    "\n",
+    "        ### CRITÉRIOS DE CODIFICAÇÃO (CODEBOOK)\n",
+    "\n",
+    "        1. CLASSIFICAÇÃO:\n",
+    "        - \"Academica\": Foco em rigor metodológico, fundamentação teórica e revisão de literatura.\n",
+    "        - \"Tecnica\": Foco em execução, procedimentos operacionais e resultados práticos/gestão.\n",
+    "\n",
+    "        2. METODOLOGIA:\n",
+    "        - \"Qualitativa\", \"Quantitativa\" ou \"Mista\".\n",
+    "\n",
+    "        3. ÁREA AVALIADA:\n",
+    "        - Escolha uma: \"Educação\", \"Saúde\", \"Meio Ambiente\", \"Gênero\", \"Raça\", \"Pobreza\" ou \"Desenvolvimento Social\".\n",
+    "\n",
+    "        4. ETAPAS DO CICLO DE POLÍTICAS PÚBLICAS (Base: Insper/IAS 2019):\n",
+    "        - \"Definição e Dimensão\": Especificação, mensuração e consequências do problema.\n",
+    "        - \"Mobilização\": Sensibilização, percepção de atores-chave e eficácia da mobilização.\n",
+    "        - \"Mapeamento dos Determinantes\": Identificação e priorização de causas modificáveis.\n",
+    "        - \"Solução\": Estratégia, modelo de mudança, validade das hipóteses e metas.\n",
+    "        - \"Justificativa\": Descrição de impacto, valoração de custos/benefícios e custo-efetividade.\n",
+    "        - \"Aprimoramento\": Monitoramento, eficiência, eficácia alocativa e validação de implementação.\n",
+    "        - \"Certificação\": Estimativas finais de impacto, custo final, adequação e resolutividade.\n",
+    "\n",
+    "        5. ODS (Objetivos de Desenvolvimento Sustentável):\n",
+    "        - Identifique as ODS (1 a 17) mais relacionadas à temática central.\n",
+    "        - Exemplo de formato: \"ODS 1; ODS 5; ODS 10\".\n",
+    "\n",
+    "        ### TAREFA\n",
+    "        Sempre que receber um texto, analise-o profundamente contra os critérios acima e \n",
+    "        responda **APENAS** com um objeto JSON válido. Não inclua textos explicativos fora do JSON.\n",
+    "\n",
+    "        ### FORMATO DE SAÍDA (OBRIGATÓRIO)\n",
+    "        {{\n",
+    "            \"titulo\": \"Título original do trabalho\",\n",
+    "            \"classificacao\": \"Academica ou Tecnica\",\n",
+    "            \"metodologia\": \"Qualitativa, Quantitativa ou Mista\",\n",
+    "            \"area_avaliada\": \"Área correspondente\",\n",
+    "            \"etapa\": \"Nome da etapa conforme o Codebook\",\n",
+    "            \"ods\": \"Lista de ODS (Ex: 3; 4)\",\n",
+    "            \"resumo_justificativa\": \"Breve frase justificando a etapa do ciclo escolhida\"\n",
+    "        }}\n",
+    "    \"\"\"\n",
+    "    # Note o uso de chaves duplas {{ }} no formato de saída; \n",
+    "    # isso é necessário porque o Python entende chaves únicas como variáveis, \n",
+    "    # então \"escapamos\" elas para que o Agente entenda que é um texto de estrutura JSON.\n",
+    "\n",
+    "\n",
+    "    # 2. Definimos o modelo (GPT-4o é o melhor para raciocínio técnico)\n",
+    "    llm = ChatOpenAI(model=\"gpt-4o\", temperature=0, api_key=openai_api_key)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 3. Criamos o \"Manual de Instruções\" do Agente (Prompt)\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", system_text), # Injeta as regras de pesquisador sênior.\n",
+    "        (\"human\", \"{input}\"), # É onde o texto do seu trabalho entrará.\n",
+    "        MessagesPlaceholder(variable_name=\"agent_scratchpad\"), # Esta é a linha mais \"mágica\". \n",
+    "        # O scratchpad (bloco de notas) é um espaço dinâmico onde \n",
+    "        # o LangChain armazena o histórico de quais ferramentas o agente já usou e \n",
+    "        # o que ele descobriu nelas antes de te dar a resposta final.\n",
+    "    ])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    # 4. Construímos de fato o Agent\n",
+    "    agent = create_openai_functions_agent(llm, tools_com_output, prompt)\n",
+    "    # Esta linha \"cola\" as três partes: \n",
+    "    # - o cérebro (llm) \n",
+    "    # - as mãos (tools_com_output que definimos antes, como o retriever e a formatação) \n",
+    "    # - as instruções (prompt). Ela cria o raciocínio lógico que sabe quando chamar uma função externa.\n",
+    "\n",
+    "    # 5. Criamos o Executor: O Agente em si é apenas uma lógica; o Executor é quem realmente roda o loop \"Pensar -> Agir -> Observar\".\n",
+    "    agent_executor = AgentExecutor(\n",
+    "        agent=agent, \n",
+    "        tools=tools_com_output, \n",
+    "        verbose=True, # com verbose=True para você ver ele 'pensando'\n",
+    "        return_intermediate_steps=False # Queremos apenas o resultado final\n",
+    "    )\n",
+    "\n",
+    "    # 6. Execução: O dicionário {\"input\": query} preenche aquele campo {input} que definimos no prompt lá atrás.\n",
+    "    resposta = agent_executor.invoke({\"input\": query}) \n",
+    "\n",
+    "    return resposta[\"output\"]\n",
+    "\n",
+    "# ---------------------------------------------------------------------------------"
+   ]
   }
  ],
  "metadata": {
